fix(visitors): prevent slide-out edges overflow

--- a/src/app/pages/e-commerce/slide-out/slide-out.component.scss
+++ b/src/app/pages/e-commerce/slide-out/slide-out.component.scss
@@ -17,6 +17,7 @@
   }
 
   .slide-out-container {
+    border-radius: nb-theme(card-border-radius);
     position: absolute;
     padding: 1.5rem;
     width: $slide-out-container-width;
